--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.apache.taverna</groupId>
 		<artifactId>apache-taverna-parent</artifactId>
-		<version>2-incubating-SNAPSHOT</version>
+		<version>2-incubating</version>
 	</parent>
 	<groupId>org.apache.taverna.workbench</groupId>
 	<artifactId>apache-taverna-workbench-product</artifactId>
