--- a/pom.xml
+++ b/pom.xml
@@ -134,9 +134,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>net.sf.taverna.t2.maven.plugins</groupId>
+				<groupId>org.apache.taverna.maven.plugins</groupId>
 				<artifactId>taverna-maven-plugin</artifactId>
-				<version>0.3.1-SNAPSHOT</version>
+				<version>${taverna.osgi.verion}</version>
 				<extensions>true</extensions>
 				<configuration>
 					<buildNumber>${buildNumber}</buildNumber>
