--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.apache.taverna</groupId>
 		<artifactId>apache-taverna-parent</artifactId>
-		<version>2-incubating</version>
+		<version>4-incubating-SNAPSHOT</version>
 	</parent>
 	<groupId>org.apache.taverna.workbench</groupId>
 	<artifactId>apache-taverna-workbench-product</artifactId>
@@ -193,6 +193,21 @@
 					<skipIfEmpty>true</skipIfEmpty>
 				</configuration>
 			</plugin>
+                        <plugin>
+                                <groupId>org.apache.rat</groupId>
+                                <artifactId>apache-rat-plugin</artifactId>
+                                <configuration combine.children="append" >
+                                        <useDefaultExcludes>true</useDefaultExcludes>
+                                        <excludes>
+						<!-- 
+						These are small config files user might need to edit without
+						having to comply with the ASF license
+						-->
+						<exclude>**/src/main/etc/conf/</exclude>
+                                        </excludes>
+                                </configuration>
+                        </plugin>
+
 		</plugins>
 		<pluginManagement>
 			<plugins>
