--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
    (the "License"); you may not use this file except in compliance with
    the License.  You may obtain a copy of the License at
 
-       http://www.apache.org/licenses/LICENSE-2.0
+       https://www.apache.org/licenses/LICENSE-2.0
 
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,8 +15,8 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.apache.taverna</groupId>
@@ -49,8 +49,8 @@
 			</activation>
 			<properties>
 				<assembly.descriptor>src/main/assembly/developer-assembly.xml</assembly.descriptor>
-				<profile.updateSite>http://taverna.incubator.apache.org/updates/workbench/3.0/dev/</profile.updateSite>
-				<profile.pluginSite>http://taverna.incubator.apache.org/updates/workbench/3.0/dev/plugins/</profile.pluginSite>
+				<profile.updateSite>https://taverna.incubator.apache.org/updates/workbench/3.0/dev/</profile.updateSite>
+				<profile.pluginSite>https://taverna.incubator.apache.org/updates/workbench/3.0/dev/plugins/</profile.pluginSite>
 			</properties>
 			<distributionManagement>
 				<repository>
@@ -67,8 +67,8 @@
 			<id>beta</id>
 			<properties>
 				<assembly.descriptor>src/main/assembly/nightly-assembly.xml</assembly.descriptor>
-				<profile.updateSite>http://taverna.incubator.apache.org/updates/workbench/3.0/beta/</profile.updateSite>
-				<profile.pluginSite>http://taverna.incubator.apache.org/updates/workbench/3.0/beta/plugins/</profile.pluginSite>
+				<profile.updateSite>https://taverna.incubator.apache.org/updates/workbench/3.0/beta/</profile.updateSite>
+				<profile.pluginSite>https://taverna.incubator.apache.org/updates/workbench/3.0/beta/plugins/</profile.pluginSite>
 			</properties>
 			<distributionManagement>
 				<repository>
@@ -85,8 +85,8 @@
 			<id>stable</id>
 			<properties>
 				<assembly.descriptor>src/main/assembly/release-assembly.xml</assembly.descriptor>
-				<profile.updateSite>http://taverna.incubator.apache.org/updates/workbench/3.0/stable/</profile.updateSite>
-				<profile.pluginSite>http://taverna.incubator.apache.org/updates/workbench/3.0/stable/plugins/</profile.pluginSite>
+				<profile.updateSite>https://taverna.incubator.apache.org/updates/workbench/3.0/stable/</profile.updateSite>
+				<profile.pluginSite>https://taverna.incubator.apache.org/updates/workbench/3.0/stable/plugins/</profile.pluginSite>
 			</properties>
 			<distributionManagement>
 				<repository>
@@ -103,8 +103,8 @@
 			<id>nightly</id>
 			<properties>
 				<assembly.descriptor>src/main/assembly/nightly-assembly.xml</assembly.descriptor>
-				<profile.updateSite>http://taverna.incubator.apache.org/updates/workbench/3.0/dev/</profile.updateSite>
-				<profile.pluginSite>http://taverna.incubator.apache.org/updates/workbench/3.0/dev/plugins/</profile.pluginSite>
+				<profile.updateSite>https://taverna.incubator.apache.org/updates/workbench/3.0/dev/</profile.updateSite>
+				<profile.pluginSite>https://taverna.incubator.apache.org/updates/workbench/3.0/dev/plugins/</profile.pluginSite>
 			</properties>
 			<distributionManagement>
 				<repository>
